NEW131844
REGRESSION (r155700): Pasting an image into content-editable regions is broken
https://bugs.webkit.org/show_bug.cgi?id=131844
Summary REGRESSION (r155700): Pasting an image into content-editable regions is broken
Brady Eidson
Reported 2014-04-18 09:37:50 PDT
REGRESSION (r155700): Pasting an image into content-editable regions is broken 1. Create a page with a content editable region 2. Open an image in Preview.app 3. Copy that image onto your pasteboard (so your pasteboard has *only* an image type on it) 4. Select-all in the content editable region, then paste. You see the broken image icon instead of the image you pasted. In radar <rdar://problem/16654156>
Attachments
Fix without test (1.15 KB, patch)
2014-04-18 09:41 PDT, Brady Eidson
no flags
Fix with attempted test. (11.54 KB, patch)
2014-04-18 13:15 PDT, Brady Eidson
no flags
Brady Eidson
Comment 1 2014-04-18 09:40:39 PDT
This happens because 155700 reorders the "get document fragment from image resource" code to add the image resource to the DocumentLoader *after* creating the document fragment that uses it. Previously we added it before. Attaching the small patch that fixes the bug by restoring the previous behavior. Seems like this can be layout testable, but I don't have the cycles to follow through with the test today.
Brady Eidson
Comment 2 2014-04-18 09:41:03 PDT
Created attachment 229648 [details] Fix without test
Brady Eidson
Comment 3 2014-04-18 13:14:40 PDT
I've messed around trying to get a test for this for about 3 hours so I could land it. The test obviously works in the browser. But no matter what I do I can't get it to work in TestWebKitAPI. I literally can't spend anymore time on this right now. It'd be awesome if somebody could figure it out to land.
Brady Eidson
Comment 4 2014-04-18 13:15:27 PDT
Created attachment 229669 [details] Fix with attempted test.
Brady Eidson
Comment 5 2014-04-18 16:27:10 PDT
We should land this without the test for now. The fix is restoring old working behavior, and this bug is blocking more important work. r? on the first patch.
Enrica Casucci
Comment 6 2014-04-18 16:28:20 PDT
Please add the ChangeLog
Brady Eidson
Comment 7 2014-04-18 16:29:29 PDT
Of course.
Brady Eidson
Comment 8 2014-04-18 16:31:02 PDT
Landed the fix itself in https://trac.webkit.org/changeset/167517 Will leave this bug open for future exploration into getting the test working.
Csaba Osztrogonác
Comment 9 2014-06-04 03:29:03 PDT
Comment on attachment 229648 [details] Fix without test Cleared Enrica Casucci's review+ from obsolete attachment 229648 [details] so that this bug does not appear in http://webkit.org/pending-commit.
Note You need to log in before you can comment on or make changes to this bug.