REGRESSION (r155700): Pasting an image into content-editable regions is broken. <rdar://problem/16654156> and https://bugs.webkit.org/show_bug.cgi?id=131844

Reviewed by Enrica Casucci.

* editing/mac/EditorMac.mm:
(WebCore::Editor::createFragmentForImageResourceAndAddResource): Add the ArchiveResource before
  creating the element that uses it.

Canonical link: https://commits.webkit.org/149937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167517 268f45cc-cd09-0410-ab3c-d52691b4dbfc